--- a/docs/mymacros.tex
+++ b/docs/mymacros.tex
@@ -15,7 +15,7 @@
 
 \newcommand{\action}{\mathcal{S}}
 \newcommand{\genkvp}{\mathcal{L}}
-\newcommand{\nbasis}{N_b}
+\newcommand{\nbasis}{N_\theta}
 \newcommand{\weights}{\beta}
 \newcommand{\kvpweights}{\vec{\weights}_\star}
 \newcommand{\lagmult}{\lambda_\star}
