--- a/docs/_test_images.qmd
+++ b/docs/_test_images.qmd
@@ -104,7 +104,7 @@ fig.savefig("test_fig/basis")
 
 ```{python}
 # fig, ax = plt.subplots(figsize=(0.8, 0.4))
-fig = plt.figure(figsize=(0.6, 0.4), frameon=False, facecolor='w', edgecolor='w')
+fig = plt.figure(figsize=(0.8, 0.4), frameon=False, facecolor='w', edgecolor='w')
 ax = plt.gca()
 
 offset = np.max(psi) + 0.1
@@ -126,7 +126,7 @@ y_pts = 3 * [0] + 3 * [1] + 3 * [2]
 
 ax = plt.gca()
 for i in range(len(x_pts)):
-    ax.plot(x_pts[i], y_pts[i], ls="", marker="s", c=f"C{i}", markersize=7, clip_on=False)
+    ax.plot(x_pts[i], y_pts[i], ls="", marker="s", c=f"C{i+2}", markersize=7, clip_on=False)
 ax.set_xticks([])
 ax.set_yticks([])
 ax.axis("off")
