--- a/docs/_test_images.qmd
+++ b/docs/_test_images.qmd
@@ -5,8 +5,8 @@
 ```{python}
 %load_ext autoreload
 %autoreload 2
-%config InlineBackend.print_figure_kwargs = {"bbox_inches": None, "facecolor": "w"}
 %matplotlib inline
+%config InlineBackend.print_figure_kwargs = {"bbox_inches": None, "facecolor": "w"}
 ```
 
 ```{python}
@@ -24,8 +24,11 @@ from emulate import ho_energy, ho_radial_wf
 from emulate import setup_rc_params
 from emulate import EigenEmulator, NCSMEmulator, BoundStateOperator
 
+from os.path import join
+
 setup_rc_params(interactive=True, constrained_layout=False)
-sns.set_palette('pastel')
+# sns.set_palette('colorblind')
+sns.set_palette("pastel")
 ```
 
 
@@ -48,104 +51,96 @@ H = matrix_high_fidelity(x[:, None], x)
 psi = wave_function(x)
 
 linewidth = 0.8
+basis_colors = ["C0", "C3", "C2"]
+save_path = "test_fig"
 ```
 
 ```{python}
-# fig, ax = plt.subplots(figsize=(1, 1))
-fig = plt.figure(figsize=(1, 1), layout="tight", frameon=False)
-ax = plt.gca()
+fig, ax = plt.subplots(figsize=(1, 1), frameon=False)
 ax.matshow(H, cmap=mpl.cm.Spectral_r)
 ax.axis("off")
 fig.tight_layout(pad=0.1, h_pad=0, w_pad=0)
-# ax.margins(0.1, 0.1)
-fig.savefig("test_fig/highfidelity")
+fig.savefig(join(save_path, "highfidelity"))
 ```
 
 ```{python}
-# fig, ax = plt.subplots(figsize=(1, 1), constrained_layout=True)
-# fig, ax = plt.subplots(figsize=(1, 1), layout=None)
-fig = plt.figure(1, figsize=(0.2, 1), layout="tight", frameon=False, facecolor='w', edgecolor='w', dpi=1000)
-ax = plt.gca()
+fig, ax = plt.subplots(figsize=(0.2, 1), frameon=False)
 
 ax.plot(psi[::-1], x, c="k", lw=linewidth, clip_on=False)
 ax.axis("off")
 ax.set_xticks([])
 ax.set_yticks([])
-# ax.margins(x=0, y=0)
-# fig.set_constrained_layout_pads(w_pad=10, h_pad=100, hspace=10, wspace=10)
-# plt.tight_layout(pad=-10)
-# plt.subplots_adjust(top = 1, bottom = 0, right = 1, left = 0, 
-#             hspace = 0, wspace = 0)
 ax.margins(0.1, 0.01)
-# ax.margins(0)
 fig.tight_layout(pad=0)
-# fig.tight_layout(pad=0, h_pad=0, w_pad=0)
-# fig.subplots_adjust(left=0, bottom=0, right=1, top=1, wspace=0, hspace=0)
-fig.savefig("test_fig/wave_function.png", bbox_inches=None)
+fig.savefig(join(save_path, "wave_function"))
 ```
 
 
 
 ```{python}
-# fig, ax = plt.subplots(figsize=(0.3, 1))
-fig = plt.figure(figsize=(0.3, 1), frameon=False, facecolor='w', edgecolor='w')
-ax = plt.gca()
+fig, ax = plt.subplots(figsize=(0.3, 1), frameon=False)
 
 offset = np.max(psi) + 0.1
-ax.plot(psi[::-1], x, lw=linewidth)
-ax.plot(psi[::-1] + offset, x, lw=linewidth)
-ax.plot(psi[::-1] + 2 * offset, x, lw=linewidth)
+ax.plot(psi[::-1], x, lw=linewidth, c=basis_colors[0])
+ax.plot(psi[::-1] + offset, x, lw=linewidth, c=basis_colors[1])
+ax.plot(psi[::-1] + 2 * offset, x, lw=linewidth, c=basis_colors[2])
 ax.axis("off")
 ax.margins(0.02, 0.01)
 fig.tight_layout(pad=0)
-fig.savefig("test_fig/basis")
+fig.savefig(join(save_path, "basis"))
 ```
 
 
 ```{python}
-# fig, ax = plt.subplots(figsize=(0.8, 0.4))
-fig = plt.figure(figsize=(0.8, 0.4), frameon=False, facecolor='w', edgecolor='w')
-ax = plt.gca()
+fig, ax = plt.subplots(figsize=(0.8, 0.4), frameon=False)
 
 offset = np.max(psi) + 0.1
-ax.plot(x, psi, lw=linewidth, clip_on=False)
-ax.plot(x, psi - offset, lw=linewidth, clip_on=False)
-ax.plot(x, psi - 2 * offset, lw=linewidth, clip_on=False)
+ax.plot(x, psi, lw=linewidth, clip_on=False, c=basis_colors[0])
+ax.plot(x, psi - offset, lw=linewidth, clip_on=False, c=basis_colors[1])
+ax.plot(x, psi - 2 * offset, lw=linewidth, clip_on=False, c=basis_colors[2])
 ax.axis("off")
 ax.margins(0.01, 0.1)
 fig.tight_layout(pad=0)
-fig.savefig("test_fig/basis_t")
+fig.savefig(join(save_path, "basis_t"))
 ```
 
 
 ```{python}
-fig = plt.figure(figsize=(0.4, 0.4), frameon=False, facecolor='w', edgecolor='w')
+fig, ax = plt.subplots(figsize=(0.4, 0.4), frameon=False)
 
 x_pts = 3 * [0, 1, 2]
-y_pts = 3 * [0] + 3 * [1] + 3 * [2]
+y_pts = 3 * [0] + 3 * [-1] + 3 * [-2]
+# y_pts *= -1
+# proj_colors = ["C0", "C4", "C9", "C4", "C1", "C3", "C9", "C3", "C2"]
+# proj_colors = ["C0", "C4", "C9", "C4", "C3", "C1", "C9", "C1", "C2"]
+# yellow = "#CCCC00"
+# yellow = "#FEDD00"
+yellow = "#ffe36e"
+# yellow = "#f8df75"
+proj_colors = ["C0", "C4", "C9", "C4", "C3", yellow, "C9", yellow, "C2"]
+# proj_colors = ["C0", "C4", "C9", "C4", "C3", "C8", "C9", "C8", "C2"]
 
-ax = plt.gca()
 for i in range(len(x_pts)):
-    ax.plot(x_pts[i], y_pts[i], ls="", marker="s", c=f"C{i+2}", markersize=7, clip_on=False)
+    ax.plot(x_pts[i], y_pts[i], ls="", marker="s", c=proj_colors[i], markersize=7, clip_on=False)
 ax.set_xticks([])
 ax.set_yticks([])
 ax.axis("off")
 ax.margins(0.09, 0.09)
 fig.tight_layout(pad=0)
-fig.savefig("test_fig/projected_matrix")
+fig.savefig(join(save_path, "projected_matrix"))
 ```
 
 ```{python}
-fig = plt.figure(figsize=(0.1, 0.4), frameon=False, facecolor='w', edgecolor='w')
-ax = plt.gca()
+fig, ax = plt.subplots(figsize=(0.1, 0.4), frameon=False)
+
 for i in range(3):
-    ax.plot([0], -i, ls="", marker=['o', 'D', 'v'][i], c=f"C{i}", markersize=4, clip_on=False)
+    ax.plot([0], -i, ls="", marker=['o', 'D', 'v'][i], c=basis_colors[i], markersize=4, clip_on=False)
 ax.set_xticks([])
 ax.set_yticks([])
 ax.axis("off")
 ax.margins(0.01, 0.1)
 fig.tight_layout(pad=0)
-fig.savefig("test_fig/coefficients")
+fig.savefig(join(save_path, "coefficients"))
 ```
 
 
@@ -153,9 +148,8 @@ fig.savefig("test_fig/coefficients")
 ```{python}
 import matplotlib.patheffects as mpe
 
-fig = plt.figure(figsize=(0.7, 0.12), frameon=False, facecolor='w', edgecolor='w')
+fig, ax = plt.subplots(figsize=(0.7, 0.12), frameon=False)
 
-ax = plt.gca()
 ax.plot([0, 1], [0, 0], lw=7, solid_capstyle='round',
     path_effects=[mpe.withStroke(linewidth=8, foreground="0.1")]
 )
@@ -164,25 +158,15 @@ ax.set_yticks([])
 ax.axis("off")
 ax.margins(0.1, 0.05)
 fig.tight_layout(pad=0)
-fig.savefig("test_fig/time_long")
+fig.savefig(join(save_path, "time_long"))
 ```
 
 
 ```{python}
 from matplotlib.patches import Rectangle, FancyBboxPatch
 from matplotlib.collections import PatchCollection
-fig = plt.figure(figsize=(0.6, 0.12), frameon=False, facecolor='w', edgecolor='w')
 
-ax = plt.gca()
-# ax.plot([0, 1], [0, 0],
-#     dash_capstyle="butt",
-#     linestyle=(0, (0.4, 0.4)),
-#     lw=7,
-#     zorder=1.5,
-#     # path_effects=[mpe.Stroke(linewidth=2.6, foreground="k"), mpe.Normal()],
-#     path_effects=[mpe.withStroke(linewidth=8, foreground="0.1")],
-# )
-
+fig, ax = plt.subplots(figsize=(0.6, 0.12), frameon=False)
 
 
 boxes = [FancyBboxPatch((2*i, 0), 1, 1, boxstyle="Round, pad=0.1")
@@ -201,5 +185,33 @@ ax.set_yticks([])
 ax.axis("off")
 ax.margins(0.012, 0.05)
 fig.tight_layout(pad=0)
-fig.savefig("test_fig/time_short")
+fig.savefig(join(save_path, "time_short"))
+```
+
+
+```{python}
+import matplotlib.patheffects as mpe
+
+fig, ax = plt.subplots(figsize=(0.1, 0.12), frameon=False)
+
+# ax.plot([0, 1], [0, 0], lw=7, solid_capstyle='round',
+#     path_effects=[mpe.withStroke(linewidth=8, foreground="0.1")]
+# )
+
+boxes = [FancyBboxPatch((2*i, 0), 1, 1, boxstyle="Round, pad=1")
+                  for i in range(1)]
+
+# Create patch collection with specified colour/alpha
+pc = PatchCollection(boxes, facecolor="C0", lw=0.5,
+                    edgecolor="0.1")
+
+# Add collection to axes
+ax.add_collection(pc)
+
+ax.set_xticks([])
+ax.set_yticks([])
+ax.axis("off")
+ax.margins(0.2, 0.05)
+fig.tight_layout(pad=0)
+fig.savefig(join(save_path, "time_short_individual"))
 ```
